# qzxing

./: .qmake.conf  CMakeLists.txt  QZXing.pro  sync.profile
examples/: CMakeLists.txt
examples/QZXingLive/: CMakeLists.txt  Info.plist  QZXingLive.pro  Qt65CameraController.qml  application.cpp  deployment.pri  main.cpp  main_qt6_2.qml  main_qt6_5_fix.qml  qml.qrc
examples/QZXingLive/android/: AndroidManifest.xml  build.gradle
src/: CMakeLists.txt  CameraImageWrapper.cpp  ImageHandler.cpp  NOTUSEUNDER6qzxingfilter.h  QZXing-components.pri  QZXing.cpp  QZXing.h  QZXingConfig.cmake.in  QZXingFilter.cpp  QZXingFilterVideoSink.cpp  QZXingFilterVideoSink.h  QZXingImageProvider.cpp  cameraimagewrapper.h  imagehandler.h  qzxing.h  qzxingfilter.h  qzxingimageprovider.h  src.pro
src/zxing/bigint/: CMakeLists.txt
src/zxing/zxing/: Binarizer.h  InvertedLuminanceSource.h  LuminanceSource.cpp  Result.h  ZXing.h  luminancesource.h
src/zxing/zxing/common/: BitArray.h  BitSource.h  ByteArray.h  DecoderResult.h  GreyscaleLuminanceSource.cpp  GreyscaleRotatedLuminanceSource.h  StringUtils.h  greyscaleluminancesource.h
src/zxing/zxing/common/reedsolomon/: ReedSolomonEncoder.h
src/zxing/zxing/oned/rss/expanded/decoders/: DecodedNumeric.h
src/zxing/zxing/qrcode/: QRFormatInformation.cpp
src/zxing/zxing/qrcode/encoder/: BlockPair.h  ByteMatrix.h
